--- a/package.json
+++ b/package.json
@@ -38,12 +38,13 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "countries-list": "^3.2.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "genkit": "^1.20.0",
-    "libphonenumber-js": "^1.12.26",
+    "libphonenumber-js": "^1.12.28",
     "lucide-react": "^0.475.0",
     "next": "^16.0.1",
     "patch-package": "^8.0.0",
