created the liquibase connection to the dbc

--- a/eathub-common-service/src/main/resources/application.yml
+++ b/eathub-common-service/src/main/resources/application.yml
@@ -3,8 +3,8 @@ spring:
     name: eathub-common-service
   
   datasource:
-    url: jdbc:postgresql://localhost:5432/eathub_db
-    username: postgres
+    url: jdbc:postgresql://localhost:5432/postgres
+    username: eathub
     password: password
     driver-class-name: org.postgresql.Driver
 
@@ -18,10 +18,15 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
 
   liquibase:
-    change-log: classpath:db/changelog/db.changelog-master.xml
+    change-log: classpath:db/changelog/db.changelog-master.sql
+    enabled: true
+    user: eathub
+    password: password
+    driver-class-name: org.postgresql.Driver
+
 
 server:
-  port: 8080
+  port: 8081
 
 logging:
   level:
